# bmad_fastapi_demo

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.bmad-core/: install-manifest.yaml
.github/chatmodes/: analyst.chatmode.md  dev.chatmode.md  pm.chatmode.md
app/: main.py
app/api/endpoints/: pokemon.py
app/models/: pokemon_model.py
app/repositories/: custom_exceptions.py  pokemon_repository.py
app/services/: pokemon_service.py
docs/: architecture.md  brief.md  prd.md  test-plan.md
docs/stories/: 0.1.setup-project-foundation.md  0.2.develop-formal-test-plan.md  0.3.implement-basic-logging.md  0.4.refine-api-validation-rules.md
tests/test_api/: test_pokemon_api.py
