[project]
name = "bmad_fastapi_demo"
version = "0.1.0"
description = "A FastAPI application for managing Pokemon."
authors = [{ name = "BMAD", email = "dev@bmad.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
